k8s/20-cart.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-service
  namespace: ecom
  labels: { app: cart-service }
spec:
  replicas: 1
  selector:
    matchLabels: { app: cart-service }
  template:
    metadata:
      labels: { app: cart-service }
    spec:
      nodeSelector:
        cloud.google.com/compute-class: ecom-spot
      tolerations:
        - key: cloud.google.com/gke-spot
          operator: Equal
          value: "true"
          effect: NoSchedule
      terminationGracePeriodSeconds: 25
      containers:
        - name: cart
          image: us-central1-docker.pkg.dev/terraform-project-883456/ecom-microservices/cart-service:46b483c
          ports:
            - containerPort: 8082
          resources:
            requests: { cpu: 200m, memory: 384Mi }
            limits:   { cpu: 500m, memory: 512Mi }
          readinessProbe:
            httpGet: { path: /actuator/health/readiness, port: 8082 }
            initialDelaySeconds: 30
          livenessProbe:
            httpGet: { path: /actuator/health/liveness, port: 8082 }
            initialDelaySeconds: 60
---
apiVersion: v1
kind: Service
metadata:
  name: cart-service
  namespace: ecom
spec:
  selector: { app: cart-service }
  ports:
    - port: 8082
      targetPort: 8082
